--- a/app/Podfile
+++ b/app/Podfile
@@ -12,6 +12,9 @@ def skyscannerPods
     
     #Images
     pod 'Haneke', '~> 1.0'
+    
+    #Plist Manager
+    pod 'SwiftyPlistManager', '~> 1.0.2'
 end
 
 target 'Skyscanner' do
