--- a/app/Skyscanner/Managers/Session Manager/Session.plist
+++ b/app/Skyscanner/Managers/Session Manager/Session.plist
@@ -1,14 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
-<!--
-   Session.plist
-   Skyscanner
-
-   Created by Ricardo Casanova on 16/12/2018.
-   Copyright (c) 2018 Skyscanner. All rights reserved.
--->
+<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
-    <dict>
-    
-    </dict>
+<dict>
+	<key>pollEndpoint</key>
+	<string></string>
+</dict>
 </plist>
